--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/effect-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Effect Framework Demo</title>
-    <meta name="description" content="Interactive demo showcasing Effect library's capabilities for building robust TypeScript applications" />
-    <meta property="og:title" content="Effect Framework Demo" />
+    <title>Effect Interactive Lab</title>
+    <meta name="description" content="Interactive lab showcasing Effect library's capabilities for building robust TypeScript applications" />
+    <meta property="og:title" content="Effect Interactive Lab" />
     <meta property="og:description" content="Explore Effect's powerful features for concurrency, error handling, dependency injection, and streams" />
     <meta property="og:type" content="website" />
   </head>
